// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TransferScheduleCardComponent should show a saveable form if the summary has been saved before 1`] = `
<pf-transfer-schedule-card
  active={[Function Boolean]}
  changesPending={[Function EventEmitter]}
  editMode={[Function Boolean]}
  scheduleDisableSubmitted={[Function EventEmitter]}
  scheduleEnableSubmitted={[Function EventEmitter]}
  scheduleSaveSubmitted={[Function EventEmitter]}
  transferSchedule={[Function Object]}
>
  <div
    class="card mb-3 shadow-sm p-3"
  >
    <div
      class="card-body"
    >
      
      <fa-icon
        class="pencil-top-right blue hide-buttons"
        icon="pencil-alt"
        placement="top"
        size="lg"
      />
      
      <fa-icon
        class="pencil-top-right blue"
        icon="times"
        placement="top"
        size="lg"
      />
      <h4
        class="card-title pb-3"
      >
        Employees
      </h4>
      
      
      <pf-transfer-schedule-cron
        id="1"
      />
      
      <div
        class="d-flex justify-content-end"
      >
        <div
          class="p-2"
        >
          
          <button
            class="btn btn-outline-danger"
            type="button"
          >
            Disable
          </button>
        </div>
        
        <div
          class="p-2"
        >
          <button
            class="btn btn-primary"
            disabled=""
            type="button"
          >
            Save
          </button>
        </div>
      </div>
    </div>
  </div>
</pf-transfer-schedule-card>
`;

exports[`TransferScheduleCardComponent should show an empty form if summary has never been saved 1`] = `
<pf-transfer-schedule-card
  active={[Function Boolean]}
  changesPending={[Function EventEmitter]}
  editMode={[Function Boolean]}
  scheduleDisableSubmitted={[Function EventEmitter]}
  scheduleEnableSubmitted={[Function EventEmitter]}
  scheduleSaveSubmitted={[Function EventEmitter]}
  transferSchedule={[Function Object]}
>
  <div
    class="card mb-3 shadow-sm p-3"
  >
    <div
      class="card-body"
    >
      
      
      <h4
        class="card-title pb-3"
      >
        Employees
      </h4>
      
      
      <pf-transfer-schedule-cron
        id="1"
      />
      
      <div
        class="d-flex justify-content-end"
      >
        <div
          class="p-2"
        >
          
          <button
            class="btn btn-outline-danger"
            type="button"
          >
            Disable
          </button>
        </div>
        
        <div
          class="p-2"
        >
          <button
            class="btn btn-primary"
            disabled=""
            type="button"
          >
            Save
          </button>
        </div>
      </div>
    </div>
  </div>
</pf-transfer-schedule-card>
`;
